--- a/index.html
+++ b/index.html
@@ -2,31 +2,38 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div class="app">
-        <h1>🌍 Weather App</h1>
-
-        <div class="search-box">
-            <input type="text" id="locationInput" placeholder="Enter city name..." />
-            <button id="searchBtn">Get Weather</button>
+    <div class="app-wrapper">
+        <div class="search-container">
+            <input type="text" id="cityInput" placeholder="Enter City Name...">
+            <button id="searchBtn">Search</button>
         </div>
 
-        <div id="weatherResult" class="weather-card hidden">
-            <h2 id="cityName"></h2>
-            <img id="weatherIcon" src="" alt="Weather icon" />
-            <p id="temperature"></p>
-            <p id="condition"></p>
+        <div class="current-weather">
+            <div class="info-left">
+                <h1 id="cityName">London</h1>
+                <p id="currentDay">Friday</p>
+                <div class="details">
+                    <p>💧 <span id="humidity">--</span>%</p>
+                    <p>💨 <span id="wind">--</span> KPH</p>
+                    <p>🧭 <span id="pressure">--</span> hPa</p>
+                </div>
+            </div>
+            <div class="info-right">
+                <img id="mainIcon" src="" alt="weather icon">
+                <h2 class="main-temp"><span id="temp">--</span>°C</h2>
+            </div>
         </div>
 
-        <p id="errorMsg" class="error hidden"></p>
+        <div class="forecast-grid" id="forecastRow">
+        </div>
     </div>
-
     <script src="script.js"></script>
 </body>
 
